# aicrobo_xi

./: README.md
aicroboxi_bringup/: CMakeLists.txt  package.xml
aicroboxi_bringup/concert/: bringup.concert  shortcut.concert
aicroboxi_bringup/launch/: 2dsensor.launch  3dsensor.launch  fake_aicroboxi.launch  minimal.launch
aicroboxi_bringup/launch/includes/: laser_filter.launch.xml  paired_private.launch.xml  paired_private_full.launch.xml  paired_public.launch.xml  rplidar_2d_sensor.launch.xml
aicroboxi_bringup/launch/includes/create/: mobile_base.launch.xml
aicroboxi_bringup/launch/includes/kobuki/: mobile_base.launch.xml
aicroboxi_bringup/scripts/: startup.sh
aicroboxi_description/: CMakeLists.txt  package.xml
aicroboxi_description/launch/: robot_description.launch.xml
aicroboxi_description/urdf/: aicroboxi_create.urdf.xacro  aicroboxi_kobuki.urdf.xacro  create_base.urdf.xacro  create_frame.urdf.xacro  kobuki_frame.urdf.xacro
aicroboxi_example/: CMakeLists.txt  package.xml
aicroboxi_example/nodes/: 2d_laser_gmapping.launch  2dnavgation.launch  move.cpp  move.py  robots_move.py
aicroboxi_nav/: CMakeLists.txt  package.xml
aicroboxi_nav/launch/: amcl_demo.launch  fake_amcl.launch  gmapping_demo.launch  hector_mapping_demo.launch
aicroboxi_nav/launch/includes/: gmapping.launch.xml  hector_mapping.launch.xml  move_base.launch.xml
aicroboxi_rviz/: CMakeLists.txt  package.xml
aicroboxi_rviz/launch/: view_mobile.launch  view_model.launch  view_navigation.launch  view_robot.launch
aicroboxi_teleop/: CMakeLists.txt  package.xml
aicroboxi_teleop/launch/: keyboard_teleop.launch
aicroboxi_teleop/nodes/: keyboard_teleop.py  teleop_joy.cpp
