<?xml version="1.0"?>
<package>
  <name>aicroboxi_nav</name>
  <version>0.0.0</version>
  <description>The aicroboxi_nav package</description>
  
  <license>BSD</license>
  <url type="website">http://www.aicrobo.com</url>
  <author email="projects@aicrobo.com">AICRobo</author>
  <maintainer email="yuanboshe@aicrobo.com">Yuanbo She</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>