<?xml version="1.0"?>
<package>
  <name>aicroboxi_teleop</name>
  <version>0.0.0</version>
  <description>The aicroboxi_teleop package</description>
  
  <license>BSD</license>
  <url type="website">http://www.aicrobo.com</url>
  <author email="projects@aicrobo.com">AICRobo</author>
  <maintainer email="yuanboshe@aicrobo.com">Yuanbo She</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>joy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>joy</run_depend>
</package>